Bug 157551 - LO Calc Data - Validity - Cell Range / LIST - Selection List - The dropdown is tiny and away from clicked arrow
Summary: LO Calc Data - Validity - Cell Range / LIST - Selection List - The dropdown i...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Validity
  Show dependency treegraph
 
Reported: 2023-10-02 08:01 UTC by Sophie Sipasseuth
Modified: 2023-11-27 14:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Demo file (10.49 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-10-02 08:01 UTC, Sophie Sipasseuth
Details
The dropdown is tiny (9.25 KB, image/png)
2023-10-02 08:02 UTC, Sophie Sipasseuth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sophie Sipasseuth 2023-10-02 08:01:30 UTC
Description:
When I used the function "Data - Validity - Cell Range / LIST - Selection List" in Calc the dropdown display is tiny only in the last version of LibreOffice.
In other versions of LibreOffice, the dropdown has the same size as the cell used to display the dropdown.

Steps to Reproduce:
1. Open the Demo file
2. click on a cell of the second table for example
3. a dropdown appears
4. expand the dropdown

Actual Results:
The dropdown expands on the side of the cell with a tiny size.

Expected Results:
The dropdown expands below the cell with the same size than the cell.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: df3b95a39472e18ea8acdaae447b7176e37a9256
CPU threads: 8; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: fr-FR
Calc: threaded
Comment 1 Sophie Sipasseuth 2023-10-02 08:01:53 UTC
Created attachment 189941 [details]
Demo file
Comment 2 Sophie Sipasseuth 2023-10-02 08:02:19 UTC
Created attachment 189942 [details]
The dropdown is tiny
Comment 3 Stéphane Guillou (stragu) 2023-10-02 12:31:41 UTC
Thanks Sophie!

I guess that the width being smaller is not as much the issue as how far it is from the arrow.
If there is a longer string in the selection list, the dropdown width does adapt to make it fit.

Reproduced on Linux too:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e9a0c97de95688b2f86bbb4dd8c823af5442401c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproduced in 7.6:

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Are you able to bibisect it, Sophie?
Comment 4 Sophie Sipasseuth 2023-10-02 12:38:43 UTC
Yes, now that you have confirmed the bug I can do it.
Comment 5 Sophie Sipasseuth 2023-10-02 12:52:38 UTC
Bi-bisected in the repository win64-24.2:

source b6b26421a1029b18b48b69dbdac4bb70fb622604
Comment 6 Stéphane Guillou (stragu) 2023-11-23 13:13:32 UTC
Thanks for the bibisect, Sophie. I can confirm that's when it started (build commit [311548b1b7fd05a8721cbea42d3a42933a71c62b] on linux-64-24-2).

commit b6b26421a1029b18b48b69dbdac4bb70fb622604
author	Noel Grandin	Thu Jul 20 08:19:52 2023 +0200
committer	Noel Grandin  Wed Aug 02 08:13:15 2023 +0200
split Point/Size/Rectangle into AbsoluteScreenPixel* types
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154676

Noel, can you please have a look?
My concerns:
- dropdown points to previous column
- dropdown points to previous row
Comment 7 Commit Notification 2023-11-24 17:46:52 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5bc39f84984fd1063865225209d905bea19833d

tdf#157551 Calc-Validity-CellRange, dropdown tiny

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Stéphane Guillou (stragu) 2023-11-27 14:08:19 UTC
Fix verified in:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 86c682273d907c77404637c89e584047de1c1099
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you, Sophie and Noel!