tdf#157551 Calc-Validity-CellRange, dropdown tiny

regression from
    commit b6b26421a1029b18b48b69dbdac4bb70fb622604
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Jul 20 08:19:52 2023 +0200
    split Point/Size/Rectangle into AbsoluteScreenPixel* types

Change-Id: I92c25041520ec5a8f03b5318c00f49bda398b051
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159915
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>